crates/aura-app/tests/ui_signals/readiness_refresh_helpers_private.stderr
error[E0603]: function `refresh_authoritative_channel_membership_readiness` is private
 --> tests/ui_signals/readiness_refresh_helpers_private.rs:2:49
  |
2 |     let _ = aura_app::ui::workflows::messaging::refresh_authoritative_channel_membership_readiness;
  |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private function
  |
note: the function `refresh_authoritative_channel_membership_readiness` is defined here
 --> src/workflows/messaging.rs
  |
  | / pub(in crate::workflows) async fn refresh_authoritative_channel_membership_readiness(
  | |     app_core: &Arc<RwLock<AppCore>>,
  | | ) -> Result<(), AuraError> {
  | |__________________________^

error[E0603]: function `refresh_authoritative_recipient_resolution_readiness` is private
 --> tests/ui_signals/readiness_refresh_helpers_private.rs:4:45
  |
4 |         aura_app::ui::workflows::messaging::refresh_authoritative_recipient_resolution_readiness;
  |                                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private function
  |
note: the function `refresh_authoritative_recipient_resolution_readiness` is defined here
 --> src/workflows/messaging.rs
  |
  | / pub(in crate::workflows) async fn refresh_authoritative_recipient_resolution_readiness(
  | |     app_core: &Arc<RwLock<AppCore>>,
  | | ) -> Result<(), AuraError> {
  | |__________________________^
